<resources>
    <string name="app_name">RewardsApp</string>
    <string name="password">Password</string>
    <string name="studRegisterAPIKeyJSON">APIKey.json</string>
    <string name="tap_to_clear_saved_api_key">Tap to clear saved API Key</string>
    <string name="tap_here_to_create_a_profile">Tap here to create a profile</string>
    <string name="login">LOGIN</string>
    <string name="remember_my_credentials">Remember my credentials</string>
    <string name="username">Username</string>
    <string name="todo">TODO</string>
    <string name="first_name">student_firstname</string>
    <string name="last_name">student_lastname</string>
    <string name="student_email_edu">student_emailid</string>
    <string name="student_id_number">student_id</string>
    <string name="base_url">http://christopherhield.org/api/</string>
    <string name="fnlabel">First Name</string>
    <string name="lnlabel">Last Name</string>
    <string name="emaillabel">Student Email (.edu)</string>
    <string name="idlabel">Student ID Number</string>
    <string name="profile_pic">profile_pic</string>
    <string name="username_hint">Enter Username</string>
    <string name="password_hint">Enter Password</string>
    <string name="firstname_hint">First Name</string>
    <string name="lastname_hint">Last Name</string>
    <string name="department_hint">Department Name</string>
    <string name="position_hint">Position Title</string>
    <string name="your_story_count">Your Story: (0 of 360)</string>
    <string name="story_hint"> Tell something about yourself! </string>
    <string name="menuitem">menuItem</string>

    <!-- Activity Profile -->
    <string name="last_first_name">lastName, firstName</string>
    <string name="username_profile">(username)</string>
    <string name="location">location</string>
    <string name="profile_image">profileImage</string>
    <string name="points_awarded">Points Awarded:</string>
    <string name="department">Department:</string>
    <string name="position">Position:</string>
    <string name="points_to_award">Points to Award:</string>
    <string name="story">Your Story:</string>
    <string name="reward_history">Reward History (0):</string>
    <string name="points_awarded_value">0</string>
    <string name="delete_profile">Delete Profile</string>
    <string name="pref">pref</string>
    <string name="edit">edit</string>
    <string name="item">Item</string>
    <string name="your_story">Your Story:</string>
    <string name="reward_points_to_send">Reward points to send:</string>
    <string name="_0">0</string>
    <string name="comment">Comment: (0 of 80)</string>
    <string name="add_comment">Add Comment</string>
    <string name="textview">TextView</string>
    <string name="yes_button">Ok</string>
    <string name="no_button">Cancel</string>


</resources>