<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/profile_delete_menu"
        android:icon="@android:drawable/ic_menu_delete"
        android:title="@string/delete_profile"
        android:visible="true"
        app:showAsAction="always" />
    <item
        android:id="@+id/preference_menu"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/pref"
        app:showAsAction="always" />
    <item
        android:id="@+id/profile_edit_menu"
        android:icon="@android:drawable/ic_menu_edit"
        android:title="@string/edit"
        app:showAsAction="always" />
    <item
        android:id="@+id/profile_leaderboard_menu"
        android:icon="@android:drawable/ic_menu_sort_by_size"
        android:title="@string/item"
        app:showAsAction="always" />

</menu>