<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/reward_constraint"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RewardActivity">

    <TextView
        android:id="@+id/reward_first_last_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/last_first_name"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/reward_profile_pic"
        android:layout_width="150dp"
        android:layout_height="200dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/todo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reward_first_last_name"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/reward_points_awarded_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/points_awarded"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/reward_profile_pic"
        app:layout_constraintTop_toTopOf="@+id/reward_profile_pic" />

    <TextView
        android:id="@+id/reward_dept_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/department"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/reward_points_awarded_title"
        app:layout_constraintTop_toBottomOf="@+id/reward_points_value" />

    <TextView
        android:id="@+id/reward_position_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/position"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/reward_points_awarded_title"
        app:layout_constraintTop_toBottomOf="@+id/reward_dept_value" />

    <TextView
        android:id="@+id/reward_story_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/your_story"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reward_profile_pic" />

    <TextView
        android:id="@+id/reward_points2send_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/reward_points_to_send"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reward_story_value" />

    <TextView
        android:id="@+id/reward_comment_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/comment"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reward_points2send_title" />

    <TextView
        android:id="@+id/reward_points_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/_0"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/reward_points_awarded_title"
        app:layout_constraintTop_toBottomOf="@+id/reward_points_awarded_title" />

    <TextView
        android:id="@+id/reward_dept_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:text="@string/textview"
        app:layout_constraintStart_toStartOf="@+id/reward_dept_title"
        app:layout_constraintTop_toBottomOf="@+id/reward_dept_title" />

    <TextView
        android:id="@+id/reward_position_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="80dp"
        android:text="@string/textview"
        app:layout_constraintStart_toStartOf="@+id/reward_dept_title"
        app:layout_constraintTop_toBottomOf="@+id/reward_dept_title" />

    <TextView
        android:id="@+id/reward_story_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/textview"
        app:layout_constraintStart_toStartOf="@+id/reward_story_title"
        app:layout_constraintTop_toBottomOf="@+id/reward_story_title" />

    <EditText
        android:id="@+id/reward_pointsTosend_value"
        android:layout_width="181dp"
        android:layout_height="30dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="16dp"
        android:background="@color/input_grey"
        android:ems="10"
        android:gravity="right"
        android:hint="@string/_0"
        android:inputType="number"
        android:minHeight="48dp"
        android:paddingLeft="4dp"
        android:paddingTop="4dp"
        android:paddingRight="4dp"
        android:paddingBottom="4dp"
        app:layout_constraintBottom_toBottomOf="@+id/reward_points2send_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/reward_points2send_title"
        app:layout_constraintTop_toTopOf="@+id/reward_points2send_title"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="TextContrastCheck,TouchTargetSizeCheck,DuplicateSpeakableTextCheck" />

    <EditText
        android:id="@+id/et_reward_comment"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:background="@color/input_grey"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/add_comment"
        android:inputType="textMultiLine"
        android:paddingStart="4dp"
        android:paddingTop="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reward_comment_title"
        tools:ignore="TextContrastCheck" />


</androidx.constraintlayout.widget.ConstraintLayout>